syntax = "proto3";

package user;
option go_package = "https://github.com/grozaqueen/julse/api/protos/user/gen";


message GetUserByIdRequest {
  uint32 user_id = 1;
}