syntax = "proto3";

package user;
option go_package = "https://github.com/grozaqueen/julse/api/protos/user/gen";

message UsersLoginRequest {
  string email = 1;
  string password = 2;
}